--- a/app/src/main/res/layout-land/activity_selected_video.xml
+++ b/app/src/main/res/layout-land/activity_selected_video.xml
@@ -87,7 +87,8 @@
             </LinearLayout>
         </LinearLayout>
 
-        <ListView
+        <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
             android:id="@+id/lv_tags"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
