--- a/app/src/main/res/layout-land/activity_start.xml
+++ b/app/src/main/res/layout-land/activity_start.xml
@@ -95,21 +95,27 @@
                 android:id="@+id/tv_analyse"
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
+                android:layout_marginLeft="32dp"
+                android:layout_marginStart="32dp"
                 android:layout_marginTop="32dp"
                 android:text="@string/new_grid"
                 android:textColor="@android:color/black"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:layout_editor_absoluteX="43dp" />
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
 
                 android:id="@+id/recycler_view"
-                android:layout_width="213dp"
-                android:layout_height="169dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="32dp"
                 android:layout_marginLeft="32dp"
+                android:layout_marginRight="32dp"
                 android:layout_marginStart="32dp"
                 android:layout_marginTop="16dp"
                 android:scrollbars="vertical"
+                android:visibility="gone"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/et_grid_title" />
    
