--- a/app/src/main/res/layout/activity_add_grid.xml
+++ b/app/src/main/res/layout/activity_add_grid.xml
@@ -9,10 +9,15 @@
 
     <LinearLayout
         android:id="@+id/linearLayout"
-        android:layout_width="926dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
         android:orientation="horizontal"
-        tools:layout_editor_absoluteX="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         tools:layout_editor_absoluteY="8dp">
 
         <ImageView
@@ -28,7 +33,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:ems="10"
-            android:hint="@string/name"
+            android:hint="@string/name_event"
             android:inputType="textPersonName"
             tools:layout_editor_absoluteX="116dp"
             tools:layout_editor_absoluteY="58dp" />
@@ -38,7 +43,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/color"
+            android:text="@string/color_event"
+            android:textSize="18sp"
             tools:layout_editor_absoluteX="363dp"
             tools:layout_editor_absoluteY="79dp" />
 
@@ -73,8 +79,8 @@
     <android.support.v7.widget.RecyclerView
 
         android:id="@+id/recycler_view"
-        android:layout_width="718dp"
-        android:layout_height="181dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
@@ -91,7 +97,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:text="FIN"
+        android:text="@string/end"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/recycler_view" />
 
