--- a/app/src/main/res/layout-land/activity_selected_video.xml
+++ b/app/src/main/res/layout-land/activity_selected_video.xml
@@ -80,7 +80,7 @@
                     style="?android:attr/buttonBarButtonStyle"/>
 
                 <Button
-                    android:id="@+id/bt_edit"
+                    android:id="@+id/btn_edit"
                     style="?android:attr/buttonBarButtonStyle"
                     android:layout_width="wrap_content"
                     android:layout_height="30dp"
