--- a/app/src/main/res/menu/settings.xml
+++ b/app/src/main/res/menu/settings.xml
@@ -4,7 +4,7 @@
 
     <item
         android:id="@+id/settings"
-        android:icon="@drawable/settings"
+        android:icon="@drawable/icons8_param_tres_48"
         android:title="@string/settings"
         app:showAsAction="ifRoom"/>
 
