--- a/app/src/main/res/layout-land/activity_record.xml
+++ b/app/src/main/res/layout-land/activity_record.xml
@@ -121,7 +121,7 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <ImageView
-                android:id="@+id/iv_delete"
+                android:id="@+id/iv_check"
                 android:layout_width="90dp"
                 android:layout_height="84dp"
                 android:layout_marginEnd="8dp"
@@ -130,24 +130,37 @@
                 android:layout_marginStart="8dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:srcCompat="@drawable/icons8_coche_96" />
+                app:srcCompat="@drawable/vyfe_logo" />
 
             <TextView
                 android:id="@+id/tv_video_save"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="26dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginLeft="8dp"
                 android:layout_marginRight="8dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
-                android:text="@string/video_save"
+                android:text="@string/save_in_progress"
                 android:textColor="@color/white"
                 android:textSize="18sp"
                 app:fontFamily="@font/roboto_bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/iv_delete" />
+                app:layout_constraintTop_toBottomOf="@+id/iv_check" />
+
+            <TextView
+                android:id="@+id/wait"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/white"
+                android:text="@string/wait_few_minutes"
+                android:fontFamily="@font/roboto"
+                android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/tv_video_save"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                android:textAllCaps="true"/>
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -168,7 +181,8 @@
                     android:background="@null"
                     android:text="@string/back_to_main"
                     android:textColor="@color/white"
-                    app:layout_constraintStart_toStartOf="parent" />
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:visibility="gone"/>
 
                 <Button
                     android:id="@+id/btn_play"
@@ -177,7 +191,8 @@
                     android:layout_marginLeft="36dp"
                     android:background="@drawable/style_button"
                     android:text="@string/show_video"
-                    android:textColor="@color/white" />
+                    android:textColor="@color/white"
+                    android:visibility="gone"/>
 
             </LinearLayout>
         </android.support.constraint.ConstraintLayout>
