--- a/app/src/main/res/layout-land/activity_connexion.xml
+++ b/app/src/main/res/layout-land/activity_connexion.xml
@@ -65,7 +65,7 @@
                     android:ems="10"
                     android:hint="@string/email"
                     android:includeFontPadding="false"
-                    android:inputType="textPersonName"
+                    android:inputType="textEmailAddress"
                     android:textColor="@color/white"
                     android:textColorHint="@color/white"
                     android:textSize="16sp"
