--- a/app/src/main/res/menu/settings.xml
+++ b/app/src/main/res/menu/settings.xml
@@ -3,15 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/settings"
-        android:icon="@drawable/icons8_param_tres_48"
-        android:title="@string/settings"
+        android:id="@+id/logout"
+        android:icon="@drawable/icons8_d_connexion_60"
+        android:title="@string/logout"
         app:showAsAction="ifRoom"/>
-
-    <item
-        android:id="@+id/img_user"
-        android:icon="@android:mipmap/sym_def_app_icon"
-        android:title="@string/avatar"
-        app:showAsAction="ifRoom" />
 
 </menu>
