--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -30,7 +30,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="50dp"
         android:background="@drawable/style_button"
-        android:text="Envoyer"
+        android:text="@string/send"
         android:textColor="#fff"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -44,7 +44,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:background="@null"
-        android:text="Retour"
+        android:text="@string/back"
         android:textAllCaps="false"
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
