--- a/app/src/main/res/layout-land/activity_record.xml
+++ b/app/src/main/res/layout-land/activity_record.xml
@@ -38,7 +38,7 @@
                         android:layout_height="match_parent">
 
                         <android.support.design.widget.FloatingActionButton
-                            android:id="@+id/bt_record_stop"
+                            android:id="@+id/bt_record"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginEnd="40dp"
@@ -58,10 +58,10 @@
                             android:layout_marginTop="16dp"
                             android:clickable="true"
                             app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintTop_toBottomOf="@+id/bt_record_stop"
+                            app:layout_constraintTop_toBottomOf="@+id/bt_record"
                             app:srcCompat="@android:drawable/checkbox_on_background" />
 
-                        <SurfaceView
+                        <FrameLayout
                             android:id="@+id/video_view"
                             android:layout_width="match_parent"
                             android:layout_height="297dp"
